# DuneAwakeningSelfHost

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTENT_INSERTION_SURFACES.md  CONTRIBUTING.md  DEEP_DESERT_EVENT_KNOBS.md  HYDRATION_WATER_KNOBS.md  LICENSE  Makefile  PLAYER_LOCATION_SOURCE_AUDIT.md  README.md  RESOURCE_RESPAWN_KNOBS.md  SECURITY.md  SERVER_BINARY_CONFIG_CANDIDATES.md  SERVER_CONFIG_KEYS.md  SERVER_CONFIG_KEY_INDEX.md  SERVER_RUNTIME_SURFACES.md  THIRD_PARTY_NOTICES.md  VENDOR_LOOT_TABLE_RESEARCH.md  backups-env-before-kspld0-return-20260522T234718Z  compose.64g-limits.yaml  compose.admin-restore.yaml  compose.admin-stack-update.yaml  compose.allmaps.yaml  compose.brt-dd-invalid-map.yaml  compose.brt-dd-tool-selected.yaml  compose.building-piece-limit-lab.yaml  compose.building-piece-limit.yaml  compose.director-hostnet-cutover.yaml  compose.director-hostnet-port.yaml  compose.failover-standby.yaml  compose.fls-ipv4-hosts.yaml  compose.gateway-hostnet.yaml  compose.handoff-lab.yaml  compose.kspls0-limits.yaml  compose.landsraad-vendor-faction-gate.yaml  compose.limits.example.yaml  compose.metrics.yaml  (+4 more)
.github/: pull_request_template.md
admin/: access_control.py  addon_admin.py  admin_panel.py  alert_inbox.py  audit_ledger.py  augment_admin.py  base_creator.py  base_retirement.py  blueprint_admin.py  canary_autopilot.py  capacity_intelligence.py  change_approvals.py  command_console.py  (+33 more)
tools/linux-client-loader/: CMakeLists.txt  dune_client_probe_loader.c
tools/linux-server-loader/: CMakeLists.txt  dune_server_probe_loader.c
(+936 files in other folders)
